Wed Apr 17 10:29:14 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp (ACE_HAS_DEV_POLL):

	  Added missing "#endif" for this configuration.

Wed Apr 17 12:47:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/WIN32_Asynch_IO.cpp (set_handle, handle_close): Fixed
          "unused argument" warnings from C++Builder.

Wed Apr 17 14:30:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-doxygen.h:
          Added define UNICODE to generate ACE_Registry_Name_Space

        * ace/Proactor.h:
        * ace/Proactor_Impl.h:
        * ace/RB_Tree.h:
        * ace/Reactor_Notification_Strategy.h:
        * ace/Recyclable.h:
        * ace/Registry.h:
        * ace/Service_Types.h:
        * ace/Signal.h:
        * ace/Token_Request_Reply.h:
        * ace/Typed_SV_Message.h:
          Doxygen-ized some of the comments

Wed Apr 17 12:27:23 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_man.doxygen:
          Removed ACE_COMPILE_TIMEPROBES as PREDEFINED because it should be
          defined in Config-doxygen.h

        * ace/Config-doxygen.h
          Added ACE_COMPILE_TIMEPROBES as define to generate timeprobe
          documentation. This config file is automatically included when doing
          a doxygen generation.

        * ace/Intrusive_List.h:
        * ace/Synch.h:
          Doxygen-ized some of the comments

        * ace/Message_Queue.h:
          Fixed typo

Wed Apr 17 07:28:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DLL/Newsweek.cpp:
        * examples/DLL/Today.cpp:
	  Added include of svc_export.h.

        * tests/Proactor_Test.cpp:
          Fixed fuzz and unicode error

        * ace/Asynch_Acceptor.h:
        * ace/Functor.h:
        * ace/Message_Queue.h:
        * ace/Module.h:
        * ace/Thread_Manager.h:
          Doxygen-ized some of the comments

Tue Apr 16 23:32:49 2002  Steve Huston  <shuston@riverace.com>
